--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ Flask = "^2.0.2"
 pymongo = {version = "^3.12.0", extras = ["srv"]}
 Flask-PyMongo = "^2.3.0"
 yagmail = "^0.14.260"
+Flask-Misaka = "^1.0.0"
 
 [tool.poetry.extras]
 srv = ["pymongo"]
